feat/get transactions history
